--- a/dizzy/assets/css/style.css
+++ b/dizzy/assets/css/style.css
@@ -1,6 +1,8 @@
 body {
   font-family: "open sans",sans-serif;
   font-size: 14px;
+  padding: 0;
+  margin:0!important;
 }
 
 p {
@@ -16,6 +18,309 @@ a{
   text-decoration: none;
 }
 a:hover{text-decoration: none;}
+
+.main_menu {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 99;
+}
+.main_menu .main-menu-item {
+  text-align: right;
+  justify-content: right;
+}
+
+.main_menu .main-menu-item ul li .nav-link:before {
+  position: absolute;
+  content: "";
+  left: 24px;
+  bottom: 30px;
+  width: 0;
+  height: 1px;
+  background-color: #00d089;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.dropdown .dropdown-menu {
+  transition: all 0.5s;
+  overflow: hidden;
+  transform-origin: top center;
+  transform: scale(1, 0);
+  display: block;
+}
+.dropdown .dropdown-menu .dropdown-item {
+  font-size: 14px;
+  padding: 9px 18px !important;
+  color: #000 !important;
+}
+
+@media (max-width: 991px){
+
+  .main_menu .main-menu-item ul li .nav-link {
+    color: #0042ff;
+  }
+  .single_page_menu .navbar-collapse ul li .nav-link  {
+    color: #000 !important;
+  }
+  .navbar-toggler span {
+    font-size: 30px;
+    color: #fff;
+  }
+  .navbar {
+    padding: 20px 0 !important;
+  }
+  .navbar-light .navbar-toggler {
+    border-color: #fff;
+  }
+  .navbar-collapse {
+    z-index: 9999 !important;
+    position: absolute;
+    left: 0;
+    top: 71px;
+    width: 100%;
+    color: #000;
+    background-color: #fff;
+    text-align: center !important;
+  }
+  .navbar-collapse {
+    z-index: 9999 !important;
+    position: absolute;
+    left: 0;
+    top: 71px;
+    width: 100%;
+    border-radius:10px;
+    background-color: #fff;
+    text-align: center !important;
+  }
+ .navbar-nav ul li{
+    color: #033;
+  }
+  .main_menu .main-menu-item {
+    text-align: left !important;
+  }
+  .main_menu .main-menu-item .nav-item {
+    padding: 10px 15px !important;
+  }
+  .main_menu .main-menu-item .nav-item a {
+    padding: 5px 15px !important;
+  }
+  .navbar-nav {
+    align-items: start !important;
+  }
+  .dropdown .dropdown-menu {
+    transform: scale(1, 0);
+    display: none;
+    margin-top: 10px;
+  }
+  .dropdown:hover .dropdown-menu {
+    transform: scale(1);
+    display: block;
+    color: #00d089;
+  }
+  .dropdown .dropdown-item:hover {
+    color: #00d089 !important;
+  }
+
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .main_menu .main-menu-item ul li .nav-link {
+    padding: 30px 16px;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px){
+  .main_menu .main-menu-item {
+    padding-left: 25px;
+  }
+}
+
+
+
+@media (max-width: 991px){
+.navbar {
+    padding: 20px 0 !important;
+}
+.main_menu .main-menu-item ul li .nav-link {
+  text-align: center;
+  /* padding: 0 30px 0 30px; */
+  color: #00d089!important;
+  z-index: 999;
+}
+}
+@media (max-width: 991px){
+.navbar-light .navbar-toggler {
+    border-color: #fff;
+}}
+.main_menu .navbar {
+  padding: 0px;
+}
+.main_menu .main-menu-item {
+  text-align: right;
+  justify-content: right;
+  overflow: hidden;
+}
+
+.menu_fixed {
+  position: fixed;
+  z-index: 9999 !important;
+  width: 100vw;
+  background-color: #00d089;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.05);
+  top: 0;
+}
+
+
+.banner_part{
+  background-image:url('../img/tech/banner_img.png');
+  /* color:rgba(27, 50, 114, 0.85); */
+  height: 800px;
+  position: relative;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-size: content;
+  background-position: center;
+  z-index: 1;
+}
+.banner_part:after {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0042ff;
+  z-index: -1;
+  opacity: .7;
+}
+
+.banner_part .banner_text {
+  display: table;
+  width: 100%;
+  height: 800px;
+}
+
+.banner_part .banner_text .banner_text_iner {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.banner_part .banner_text h5 {
+  font-size: 20px;
+  text-transform: capitalize;
+  font-weight: 500;
+  color: #fff;
+  margin-bottom: 38px;
+}
+
+.banner_part .banner_text h1 {
+  font-size: 65px;
+  text-transform: capitalize;
+  font-weight: 700;
+  margin-bottom: 27px;
+  line-height: 75px;
+  color: #fff;
+}
+
+
+
+#portfolio .single_our_project {
+  position: relative;
+  z-index: 1;
+}
+
+#portfolio .single_our_project .single_offer img {
+  width: 100%;
+  height: 350px;
+  position: relative;
+  z-index: 1;
+}
+
+
+
+
+#portfolio .single_our_project .single_offer .hover_text {
+  position: absolute;
+  bottom: 0;
+  z-index: 100;
+  opacity: 0;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: #fff;
+  padding: 10px 20px;
+  left: 15px;
+  right: 15px;
+  text-align: center;
+}
+
+#portfolio .single_our_project .single_offer .hover_text p {
+  color: #848484;
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+
+#portfolio .single_our_project .single_offer .hover_text h2 {
+  text-align: center;
+}
+
+#portfolio .single_our_project .single_offer .hover_text a{
+  color: #000;
+  text-decoration: none;
+}
+#portfolio .single_our_project:hover .hover_text{
+  opacity: 1;
+
+}
+
+
+
+
+#portfolio{
+  background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('../img/tech/banner_img.png');
+  background-size: cover;
+  background-position: center;
+  color: #efefef;
+  background-attachment: fixed;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+#portfolio h1{
+ 
+  text-align: center;
+  color: #efefef;
+  padding-bottom: 10px;
+}
+
+#portfolio h1::after{
+ content: '';
+ background: #efefef;
+ display: block;
+ height: 3px;
+ width: 170px;
+ margin:20px auto 5px;
+
+}
+
+.services{
+  margin-top: 40px;
+}
+
+.hover_text .icon{
+  font-size: 24px;
+  margin: 5px auto;
+  /* padding: 20px; */
+  height: 40px;
+  width: 40px;
+  color: #848484;
+  border: 1px solid #aaa;
+  border-radius: 50% ;
+}
+
+
+
+
+
 ul {
   list-style: none;
   margin: 0;
@@ -26,6 +331,16 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.2em;
 }
 
+/* .items_nav{
+  float: right;
+} */
+@media (max-width: 991px){
+.navbar ul{
+  /* padding: 0 250px 0 250px; */
+
+  /* text-align:left; */
+  } 
+}
 .btn-1 {
   display: inline-block;
   padding: 27px 70px;
@@ -49,9 +364,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-.nav {
-  margin-left: 200px;
-}
 
 .nav-item {
   color: #333;
@@ -69,18 +381,23 @@ h1, h2, h3, h4, h5, h6 {
   transition: 5s;
 }
 
-.social_icon {
-  margin-right: 20px;
+
+
+footer .social_icon i {
+  color: #333;
+font-size: 14px;
+z-index: 99999;
+padding: 5px 5px 5px 0;
 }
-.social_icon i:hover{
+footer .social_icon i:hover{
   color: #00d089;
   transition: 0.6s;
   }
+ 
   .social_icon i {
-    color: #fff;
-    margin-left: 28px;
+    color: #333;
+  font-size: 24px;
   }
-
 .nav-item {
   display: list-item;
   text-align: -webkit-match-parent;
@@ -91,6 +408,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   z-index: 99;
 }
+
 
 .main-menu .navbar {
   font-family: "Open Sans", sans-serif;
@@ -109,6 +427,9 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   }
 
+  #slider{
+    z-index: 100;
+  }
   .navscroll>#scrolling-icons>i:hover{
     color:  rgba(0,66,255,0.85);
     transition: 0.5s;
@@ -119,23 +440,69 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff !important;
 }
 
-.banner-text {
-  margin-top: -100px;
-  margin-right: 500px;
-  margin-left: 150px;
-  padding: 30px;
+.banner_text {
+padding: 70px;
 }
 
-.banner-text p {
+.space{
+  margin-bottom: 40px;
+}
+.carousel-caption{
+  margin: auto 150px 250px 150px;
+}
+
+.banner_text h5 {
   font-size: 28px!important;
   font-weight: 500;
-  /* margin-left: -27px; */
-}
+  padding: 10px;
+  }
 
-.banner-text h2 {
+.banner_text h1  {
+  padding: 10px;
   font-weight: 700;
   font-size: 64px;
   line-height: 65px;
+}
+
+@media screen and (max-width: 1300px) {
+  .carousel-caption{
+    margin: auto 100px 250px 100px;
+  }
+  .banner_text h5 {
+    font-size: 28px!important;
+    font-weight: 600;
+    padding: 0;
+    margin:0;
+    }
+    .banner_text h1  {
+      margin: 0;
+      padding: 0;
+      font-size: 52px;
+      /* line-height: 30px; */
+    }
+    
+}
+
+@media screen and (max-width: 430px) {
+  .carousel-caption{
+    margin: 0;
+    padding: 0;
+  }
+  .banner_text h5 {
+    font-size: 14px!important;
+    font-weight: 500;
+    padding: 0;
+    margin:0;
+    }
+    .banner_text h1  {
+      margin: 0;
+      padding: 0;
+      font-size:18px;
+      /* line-height: 30px; */
+    }
+    .space{
+      margin: 0;
+    }
 }
 
 .main-button {
@@ -417,15 +784,26 @@ margin-left: 0;
   font-size: 38px;
   text-align: center;
   padding-bottom: 10px;
-  margin: 75px auto auto 75px;
+   margin-top: 75px; 
 }
 
 #deal a {
-  
-  margin: auto 570px ;
+  margin:  auto 45%;
+  text-align: center ;
 }
 
-
+@media (max-width: 1030px) {
+  #deal h2 {
+    font-size: 24px;
+    text-align: center;
+    padding-bottom: 10px;
+     margin-top: 75px; 
+  }
+  #deal a {
+    margin:  auto 35%;
+    text-align: center ;
+  }
+}
 
 .icon-control-play {
   height: 75px;
@@ -641,4 +1019,7 @@ margin-left: 0;
 
 .footer-area h2, h4{
   font-weight: 600;
+}
+.footer-text{
+  /* margin: auto 50px auto 50px */
 }
